@@ -153,6 +153,8 @@ production.
 * Translate the block expiry date
 * (bug 28630) Add iwlinks, langlinks, redirect to
   RefreshLinks::deleteLinksFromNonexistent
+* (bug 29797) Error: "Tried to load block with invalid type" when subpages
+  are disabled for user pages.
 
 === API changes in 1.19 ===
 * BREAKING CHANGE: action=watch now requires POST and token.
